<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testrosgazebo</name>
  <version>0.0.1</version>
  <description>Package to launch a gazebo world using ROS</description>
  <maintainer email="cesar_carballido@symbotic.com">cesar_carballido</maintainer>
  <license>Apache license 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="lib"/>
    <gazebo_ros gazebo_model_path="share/testrosgazebo/models"/>
  </export>
</package>
